# server/routes/contact.js
@@ -3,8 +3,8 @@ var router = express.Router()
 
 var { contact, all, acknowledge } = require('../controllers/contact')
 
-router.get('/all', all)
-router.get('/acknowledge', acknowledge)
+router.get('/', all)
+router.put('/acknowledge', acknowledge)
 router.post('/', contact)
 
 module.exports = router
